env/stage/namespace.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: stage
---
apiVersion: v1
kind: Namespace
metadata:
  name: prod
