env/stage/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quickbite-app-stage
  namespace: stage
  labels:
    app: quickbite-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: quickbite-app-stage
  template:
    metadata:
      labels:
        app: quickbite-app-stage
    spec:
      containers:
      - name: app
        image: devquickbite.azurecr.io/quickbite:latest
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "250m"
            memory: "256Mi"
        securityContext:
          runAsNonRoot: true
          runAsUser: 1000
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
            - ALL
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
